# my-glucose-analysis

./: README.md
data-analysis/: .gitignore  00-clean-data.ipynb  01-plot-data.ipynb  02-find-correlations.ipynb  README.md  pyproject.toml
telegram-bot/: .gitignore  README.md  pyproject.toml  run-as-systemd-service.sh
telegram-bot/telegram_bot/: main.py
telegram-bot/telegram_bot/handlers/commands/: list_drug_command.py  list_food_command.py
telegram-bot/telegram_bot/handlers/conversations/: log_drug_conversation.py  log_food_conversation.py
telegram-bot/telegram_bot/handlers/messages/: default_message_handler.py
